# hardtry

./: .gitignore  README.md  pyproject.toml
docs/: README.md  exps-commons.md  src-hardtry.md
exps/: Qwen3-4B-Thinking-2507.ipynb  README.md  RESULT.csv  run.sh  train.py  trl.ipynb
exps/ast/: AST.ipynb
exps/baseline/: README.md  run.sh  vllm_config.yaml  vllm_config4.yaml
exps/baseline06/: eval_local.sh
exps/baseline_4b/: README.md
exps/baseline_4bthinking/: README.md
exps/baseline_8b/: README.md
exps/commons/: README.md  eval_local.sh  merge_swift_fsdp_local.sh  merge_verl_fsdp_auto.sh  merge_verl_fsdp_local.sh  run_example.sh  train_sft_local.sh
exps/dora1/: README.md  data_multi_turn.csv  eval.sh  eval_config5.yaml  merge_config.yaml  merge_dora.py  system_prompt.txt  train.py  train.sh  train_config.yaml
exps/dora2/: eval5.py  merge_dora.py  train.py  vllm_config.yaml  vllm_config4.yaml
exps/dora3/: promt_demo_check.txt  system_prompt_check.txt  train.py
exps/full1/: merge_local.sh  promt_demo_check.txt  system_prompt_check.txt  train.py  train_local.sh
exps/full10/: README.md  run_local.sh
exps/full11/: README.md  run_local.sh
exps/full12/: README.md  run_local.sh
exps/full13/: README.md  run_local.sh
exps/full14/: README.md  run_local.sh
exps/full2/: eval_local.sh  merge_local.sh  train_local.sh
exps/full3/: merge_swift_fsdp_local.sh  train_local.sh
exps/full4/: merge_swift_fsdp_local.sh  train_local.sh
exps/full5/: merge_swift_fsdp_local.sh  train_local.sh
exps/full6/: merge_swift_fsdp_local.sh  train_local.sh
exps/full7/: merge_swift_fsdp_local.sh  train_local.sh
(+466 files in other folders)
