[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hardtry"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "hydra-core>=1.3.0",
    "rich>=14.3.1",
    "transformers>=4.57.6",
    "vllm>=0.15.0",
]

[project.scripts]
hardtry-run = "hardtry.run:main"

[tool.hatch.version]
path = "src/hardtry/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/hardtry"]

[tool.hatch.build.targets.sdist]
include = [
    "src/hardtry/",
    "README.md",
    "pyproject.toml",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    ".venv",
    "venv",
    "dist",
    "build",
    "__pycache__",
    ".git",
    ".github",
    "**/*.ipynb",
]
extend-include = ["*.py"]
lint.select = ["E", "F", "W", "UP", "I"]
lint.ignore = ["E203", "E501"]
lint.fixable = ["ALL"]
